manifests/application/llm-chat-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: llm-chat
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: llm-chat
