manifests/application/llm-chat-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: llm-chat
spec:
  path: /
  to:
    kind: Service
    name: llm-chat
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
